Fix search results layout issues

--- a/src/AdminDashboard/Suggestions/SuggestionsTab.scss
+++ b/src/AdminDashboard/Suggestions/SuggestionsTab.scss
@@ -1,4 +1,7 @@
 .game-search {
   width: 800px;
   height: 700px;
+
+  display: flex;
+  flex-direction: column;
 }
